# CHHESS

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
CHHESS/: main.py
CHHESS/Chess/: Board.py  Game.py  Objects.py  Piece.py  Sequence.py
docs/: CHHESS.CHHESS.Chess.rst  CHHESS.CHHESS.Solver.rst  CHHESS.CHHESS.rst  CHHESS.rst  CHHESS.tests.rst  conf.py  index.rst  modules.rst
docs/source/: conf.py  index.rst  modules.rst  src.game.rst  src.rst  src.solver.rst  tests.rst
game/: Board.py  Piece.py  Sequence.py  game.py
src/: main.py
src/chhess/game/: game.py  objects.py
src/game/: game.py
tests/: test_Objects.py  test_board.py
txt/: TODO.txt  board.txt  objects.txt  standards.txt  structure.txt
