[tool.poetry]
name = "chhess"
version = "0.1.0"
description = ""
authors = ["Hansen <hansen@sidratresearch.com>"]
readme = "README.md"
packages = [{include = "src/chhess"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
